--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,8 @@
 	"require": {
 	    "php": "~5.5.0|~5.6.0|~7.0.0",
 	    "magento/framework": "100.*",
-        "magento/module-ui": "100.*",
-        "magento/module-config": "100.*",
-        "magento/module-checkout": "100.*"
+            "magento/module-paypal": "100.1.*",
+            "magento/module-checkout": "100.*"
 	},
 	"type": "magento2-module",
 	"version": "1.0.0",
