--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,12 @@
 	"name": "qbo/module-paypalplusmx",
 	"description": "PayPal Plus Mexico",
 	"require": {
-	    "php": "~5.5.0|~5.6.0|~7.0.0",
-	    "magento/framework": "100.*",
-            "magento/module-paypal": "100.*",
-            "magento/module-checkout": "100.*"
+	    "php": "~5.5.0|~5.6.0|~7.0.0|7.0.2|7.0.4|~7.0.6|~7.1.0",
+        "magento/framework": "100.0.*|100.1.*|101.0.*",
+        "magento/module-paypal": "100.1.*|100.2.*",
+        "magento/module-checkout": "100.*|100.2.*"
 	},
 	"type": "magento2-module",
-	"version": "1.2",
 	"license": [
 	    "OSL-3.0",
 	    "AFL-3.0"
