--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
 	"description": "PayPal Plus Mexico",
 	"require": {
 	    "php": "~5.5.0|~5.6.0|~7.0.0|7.0.2|7.0.4|~7.0.6|~7.1.0",
-        "magento/framework": "100.0.*|100.1.*|101.0.*",
-        "magento/module-paypal": "100.1.*|100.2.*",
-        "magento/module-checkout": "100.*|100.2.*"
+        "magento/framework": "100.0.*|100.1.*|101.0.*|102.0.*",
+        "magento/module-paypal": "100.1.*|100.2.*|100.3.*",
+        "magento/module-checkout": "100.*|100.2.*|100.3.*"
 	},
 	"type": "magento2-module",
 	"license": [
