--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,7 @@
 {
 	"name": "qbo/module-paypalplusmx",
 	"description": "PayPal Plus Mexico",
-	"require": {
-        "magento/module-paypal": "100.1.*|100.2.*|100.3.*",
-        "magento/module-checkout": "100.*|100.2.*|100.3.*"
-	},
+	"require": {},
 	"type": "magento2-module",
 	"license": [
 	    "OSL-3.0",
